--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <!-- <link rel="icon" href="favicon.ico" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Harish Tatikonda Resume" />
+    <meta name="description" content="Mounika P Resume" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script
@@ -39,7 +39,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Harish Tatikonda</title>
+    <title>Mounika P</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
